기능: paint 색상 변경 기능 추가

--- a/index.html
+++ b/index.html
@@ -24,15 +24,42 @@
         <button id="jsSave">Save</button>
       </div>
       <div class="controls__colors" id="jsColors">
-        <div class="controls__color" style="background-color: #2d3436;"></div>
-        <div class="controls__color" style="background-color: white;"></div>
-        <div class="controls__color" style="background-color: #d63031;"></div>
-        <div class="controls__color" style="background-color: #e17055;"></div>
-        <div class="controls__color" style="background-color: #fdcb6e;"></div>
-        <div class="controls__color" style="background-color: #fdcb6e;"></div>
-        <div class="controls__color" style="background-color: #0984e3;"></div>
-        <div class="controls__color" style="background-color: #74b9ff;"></div>
-        <div class="controls__color" style="background-color: #a29bfe;"></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #2d3436;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: white;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #d63031;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #e17055;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #fdcb6e;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #fdcb6e;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #0984e3;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #74b9ff;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color: #a29bfe;"
+        ></div>
       </div>
     </div>
     <script src="app.js"></script>
