기능: 캔버스 화면 지우기 기능 추가

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div class="controls__buttons">
         <button id="jsMode">Fill</button>
         <button id="jsSave">Save</button>
+        <button id="jsClear">Clear</button>
       </div>
       <div class="controls__colors" id="jsColors">
         <div
@@ -46,7 +47,7 @@
         ></div>
         <div
           class="controls__color jsColor"
-          style="background-color: #fdcb6e;"
+          style="background-color: #00b894;"
         ></div>
         <div
           class="controls__color jsColor"
