--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
   <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
-      <div class="controls__range">
-        <input
-          type="range"
-          id="jsRange"
-          min="0.1"
-          max="5.0"
-          value="2.5"
-          step="0.1"
-        />
+      <div class="controls__range range">
+        <input id="jsRange" type="range" min="0.1" value="5" max="20" />
       </div>
+
       <div class="controls__buttons">
         <button id="jsMode">Fill</button>
         <button id="jsSave">Save</button>
