기능: 색상 선택시 어떤 색 선택되었는지 표시하는 기능 추가-1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="controls__colors" id="jsColors">
         <div
           class="controls__color jsColor"
-          style="background-color: #2d3436;"
+          style="background-color: #2d3436; border: solid 3px #ffa801;"
         ></div>
         <div
           class="controls__color jsColor"
